--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -21,15 +21,17 @@ jobs:
       run: sudo apt-get update
 
     - name: Install Tools
-      run: sudo apt-get install -y git curl reprepro gnupg2
+      run: sudo apt-get install -y git curl reprepro gnupg2 procps
 
     - name: Ensure gpg-agent is Running
       run: |
         gpg --list-keys # Needed to initialize gpg home dir if it isn't
         gpg-connect-agent reloadagent /bye
+        top -n 1 -b
 
     - name: Import GPG Key
       run: |
+        top -n 1 -b
         echo "${{ secrets.REPO_PRIVATE_KEY }}" > private.pgp
         echo ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }} | gpg --batch --yes --passphrase-fd 0 --import private.pgp
         rm private.pgp
@@ -51,6 +53,7 @@ jobs:
     - name: Run includedsc
       run: |
         cd $HOME/ppa/debian
+        top -n 1 -b
         reprepro includedsc unstable $HOME/tgstation-server_5.12.6-1.dsc
 
     - name: Commit
