--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -34,6 +34,7 @@ jobs:
         echo "${{ secrets.REPO_PRIVATE_KEY }}" > private.pgp
         echo ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }} | gpg --batch --yes --passphrase-fd 0 --import private.pgp
         rm private.pgp
+        gpg --list-keys
 
     - name: Clone gh-pages
       run: git clone -b gh-pages --single-branch "https://git@github.com/tgstation/tgstation-ppa" $HOME/ppa
@@ -47,11 +48,13 @@ jobs:
     - name: Run includedeb
       run: |
         cd $HOME/ppa/debian
+        /usr/lib/gnupg2/gpg-preset-passphrase -P ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }}
         reprepro includedeb unstable $HOME/tgstation-server_5.12.6-1_amd64.deb
 
     - name: Run includedsc
       run: |
         cd $HOME/ppa/debian
+        /usr/lib/gnupg2/gpg-preset-passphrase -P ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }}
         reprepro includedsc unstable $HOME/tgstation-server_5.12.6-1.dsc
 
     - name: Commit
