--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Initialize gpg-agent
       uses: crazy-max/ghaction-import-gpg@v5.3.0
       with:
-        gpg-private-key: ${{ secrets.REPO_PRIVATE_KEY }}
+        gpg_private_key: ${{ secrets.REPO_PRIVATE_KEY }}
         passphrase: ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }}
 
     - name: Clone gh-pages
