--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -24,7 +24,7 @@ jobs:
       run: sudo apt-get install -y git curl reprepro gnupg2 procps
 
     - name: Initialize gpg-agent
-      uses: crazy-max/ghaction-import-gpg@v5.3.0
+      uses: crazy-max/ghaction-import-gpg@72b6676b71ab476b77e676928516f6982eef7a41
       with:
         gpg_private_key: ${{ secrets.REPO_PRIVATE_KEY }}
         passphrase: ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }}
