--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -24,7 +24,7 @@ jobs:
       run: sudo apt-get install -y git curl reprepro gnupg2 procps xz-utils
 
     - name: Initialize gpg-agent
-      uses: crazy-max/ghaction-import-gpg@72b6676b71ab476b77e676928516f6982eef7a41
+      uses: crazy-max/ghaction-import-gpg@72b6676b71ab476b77e676928516f6982eef7a41 # v5.3.0
       with:
         gpg_private_key: ${{ secrets.REPO_PRIVATE_KEY }}
         passphrase: ${{ secrets.REPO_PRIVATE_KEY_PASSPHRASE }}
@@ -35,13 +35,13 @@ jobs:
     - name: Download and Extract TGS Debian Packaging Bundle
       run: |
         cd $HOME
-        curl -L https://github.com/tgstation/tgstation-server/releases/download/tgstation-server-v${{ github.event.inputs.tgs_semver }}/tgstation-server-v5.12.6.debian.packaging.tar.xz -o tgstation-server-v5.12.6.debian.packaging.tar.xz
-        tar -xvf tgstation-server-v5.12.6.debian.packaging.tar.xz
+        curl -L https://github.com/tgstation/tgstation-server/releases/download/tgstation-server-v${{ github.event.inputs.tgs_semver }}/tgstation-server-v${{ github.event.inputs.tgs_semver }}.debian.packaging.tar.xz -o tgstation-server-v${{ github.event.inputs.tgs_semver }}.debian.packaging.tar.xz
+        tar -xvf tgstation-server-v${{ github.event.inputs.tgs_semver }}.debian.packaging.tar.xz
 
     - name: Run reprepro include
       run: |
         cd $HOME/ppa/debian
-        reprepro include unstable $HOME/tgstation-server_5.12.6-1_amd64.changes
+        reprepro include unstable $HOME/tgstation-server_${{ github.event.inputs.tgs_semver }}-1_amd64.changes
 
     - name: Commit
       run: |
