--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -20,8 +20,11 @@ jobs:
     - name: apt-get update
       run: sudo apt-get update
 
-    - name: Install Tools
-      run: sudo apt-get install -y git curl reprepro gnupg2 procps xz-utils
+    - name: Install Tools # TODO: Install reprepro from apt once 5.4.1 migrates to ubuntu from debian
+      run: |
+        sudo apt-get install -y git curl gnupg2 procps xz-utils
+        curl -L https://deb.debian.org/debian/pool/main/r/reprepro/reprepro_5.4.2-1_amd64.deb -o reprepro.deb
+        sudo apt-get install -y ./reprepro.deb
 
     - name: Initialize gpg-agent
       uses: crazy-max/ghaction-import-gpg@72b6676b71ab476b77e676928516f6982eef7a41 # v5.3.0
