Fix reprepro caching

--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/cache@v3
       id: cache-reprepro
       with:
-        path: ~/reprepro-deb-cache
+        path: $HOME/reprepro-deb-cache
         key: reprepro-deb
 
     - name: Download Reprepro .deb # TODO: Install reprepro from apt once 5.4.1 migrates to ubuntu from debian. The direct link has been known to 404 on updates                          
