--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 concurrency:
-  group: "package-update-${{ github.head_ref || github.run_id }}-${{ github.event_name }}"
+  group: "package-update-tgs"
   cancel-in-progress: false
 
 jobs:
