--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -31,7 +31,7 @@ jobs:
       if: steps.cache-reprepro.outputs.cache-hit != 'true'
       run: |
         sudo apt-get install -y curl
-        mkdir -p /reprepro-deb-cache
+        sudo mkdir /reprepro-deb-cache
         sudo curl -L https://deb.debian.org/debian/pool/main/r/reprepro/reprepro_5.4.4-1_amd64.deb -o /reprepro-deb-cache/reprepro.deb
 
     - name: Install Reprepro
