All package updates must be synchronous

--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 concurrency:
-  group: "package-update-tgs"
+  group: "package-update"
   cancel-in-progress: false
 
 jobs:
