Try the latest Ubuntu version?

--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   add_tgs_version:
     name: Add TGS Version
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
     - name: apt-get update
       run: sudo apt-get update
