--- a/.github/workflows/add_tgs_version.yml
+++ b/.github/workflows/add_tgs_version.yml
@@ -32,14 +32,16 @@ jobs:
       run: |
         sudo apt-get install -y curl
         sudo mkdir /reprepro-deb-cache
-        sudo curl -L https://deb.debian.org/debian/pool/main/r/reprepro/reprepro_5.4.6-2_amd64.deb -o /reprepro-deb-cache/reprepro.deb
+        sudo curl -L https://file.house/yaegqh-RsQiJ5t7M9x8lUA==.deb -o /reprepro-deb-cache/reprepro.deb
+        sudo curl -L https://file.house/Tnj9xcOWUoPm6doXgBPENg==.deb -o /reprepro-deb-cache/libgpgme11t64_1.24.2-1+b1_amd64.deb
 
     - name: Run file on .deb
       run: file /reprepro-deb-cache/reprepro.deb
 
     - name: Install Reprepro
       run: |
-        sudo apt-get install -y git gnupg2 procps xz-utils /reprepro-deb-cache/reprepro.deb
+        sudo apt-get install -y git gnupg2 procps xz-utils /reprepro-deb-cache/libgpgme11t64_1.24.2-1+b1_amd64.deb
+        sudo apt-get install -u /reprepro-deb-cache/reprepro.deb
 
     - name: Initialize gpg-agent
       uses: crazy-max/ghaction-import-gpg@cb9bde2e2525e640591a934b1fd28eef1dcaf5e5 # v6.2.0
